3장 . the hero editor - 클래스 생성 및 show

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,4 +2,9 @@
   {{hero.id}} : {{hero.name}}
 </p>
 
+<div>
+  <label>name :
+    <input [(ngModel)]="hero.name" placeholder="name">
+  </label>
+</div>
 
