--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,15 @@
-<p>
-  {{hero.id}} : {{hero.name}}
-</p>
+<h2>My heroes</h2>
 
-<div>
+<!-- *ngFor 반복문 let ? of ? -->
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <span class="badges">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+
+<!--<div>
   <label>name :
     <input [(ngModel)]="hero.name" placeholder="name">
   </label>
-</div>
+</div>-->
 
