4장 click이벤트 및 ngIf 사용하여 detail 영역 보이기

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,15 +1,21 @@
 <h2>My heroes</h2>
 
 <!-- *ngFor 반복문 let ? of ? -->
+<!-- (click) 이벤트 바인딩 -->
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <span class="badges">{{hero.id}}</span> {{hero.name}}
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
 
-<!--<div>
-  <label>name :
-    <input [(ngModel)]="hero.name" placeholder="name">
-  </label>
-</div>-->
+<!-- *ngIf 돔이 있거나 없거나 -->
+<div *ngIf="selectedHero">
+  <h2>{{selectedHero.name | uppercase}}</h2>
+  <div><span>id: </span>{{selectedHero.id}}</div>
+  <div>
+    <label>name :
+      <input [(ngModel)]="selectedHero.name" placeholder="name">
+    </label>
+  </div>
+</div>
 
