--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -3,7 +3,9 @@
 <!-- *ngFor 반복문 let ? of ? -->
 <!-- (click) 이벤트 바인딩 -->
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+
+  <!-- [class.selected]="hero == selectedHero"는 jquery의 addClass/removeClass와 동일 -->
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero == selectedHero">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
